--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,10 @@ dependencies:
   - jupyter
   - jupyterlab
   - pandas
+  - geopandas
+  - geodatasets
+  - contextily
+  - h3-py
   - requests
   - numpy
   - matplotlib
